--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>o caos dos minions</title>
+    <link rel="stylesheet" href="./estilo.css"
+    ad>
+    y>
 </head>
 <body>
     <h1>teste</h1>
