--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <script src="./main.js"></script>
 <body>
-    <h1>teste</h1>
+    <main>
+        <img src="" alt="">
+        <p></p>
+        <button></button>
+        <button></button>
+        </main>
 </body>
 </html>
