--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script src="./main.js"></script>
 <body>
     <main>
-        <img src="" alt="">
+        <img src="./hq720.jpg" alt="">
         <p></p>
         <button></button>
         <button></button>
