--- a/index.html
+++ b/index.html
@@ -5,16 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>o caos dos minions</title>
     <link rel="stylesheet" href="./estilo.css"
-    ad>
-    y>
+    head>
+    <body>
+        
+    </body>
+        
+    </body>y>
 </head>
 <script src="./main.js"></script>
 <body>
     <main>
+        <div class="passo ativo" id="passo-0">
         <img src="./hq720.jpg" alt="">
-        <p></p>
+        <p>Gru precisa de um item para seu novo plano. Ele manda os Minions em uma missão crucial.
+
         <button></button>
         <button></button>
+        </div>
         </main>
 </body>
 </html>
