--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
         <div class="passo ativo" id="passo-0">
         <img src="./hq720.jpg" alt="">
         <p>Gru precisa de um item para seu novo plano. Ele manda os Minions em uma missão crucial.
+        <button>"Diamante Estelar" do Museu de Vilões.
 
-        <button></button>
-        <button></button>
+        </button>
+        <button>"Banana Cósmica" na Selva Perdida.
+
+        </button>
         </div>
         </main>
 </body>
