--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-        <img src="./hq720.jpg" alt="">
-        <p>Gru precisa de um item para seu novo plano. Ele manda os Minions em uma missão crucial.
+        <img class="img01" src="./hq720.jpg" alt="">
+        <p>Gru precisa de um item para seu novo plano. Ele manda os Minions em uma missão crucial.</p>
         <button>"Diamante Estelar" do Museu de Vilões.
 
         </button>
