--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <div class="passo ativo" id="passo-0">
         <img class="img01" src="./hq720.jpg" alt="">
         <p>Gru precisa de um item para seu novo plano. Ele manda os Minions em uma missão crucial.</p>
-        <button class="btn-proximo">"Diamante Estelar" do Museu de Vilões.
+        <button class="btn-proximo" data-proximo="1">"Diamante Estelar" do Museu de Vilões.
 
         </button>
-        <button class="btn-proximo">"Banana Cósmica" na Selva Perdida.
+        <button class="btn-proximo" data-proximo="2">"Banana Cósmica" na Selva Perdida.
 
         </button>
         </div>
