--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
 
         </button>
         </div>
+        <div class="passo ativo" id="passo-0">
+        <img class="img01" src="./fodinhas.png" alt="">
+        <p>Em qualquer missão, algo sempre dá errado com os Minions...</p>
+        <button class="btn-proximo" data-proximo="3">Os Minions trocam o Diamante por uma gema de gelatina gigante.
+        </button>
+        <button class="btn-proximo" data-proximo="4">Os Minions acionam o alarme e o museu inteiro se transforma em uma pista de dança.
+
+        </button>
+        </div>
         </main>
 </body>
 </html>
