--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
 
         </button>
         </div>
+        <div class="passo ativo" id="passo-1">
+        <img class="img01" src="./fodoes.jpg" alt="">
+        <p>Em qualquer missão, algo sempre dá errado com os Minions...</p>
+        <button class="btn-proximo" data-proximo="3">Os Minions comem a Banana Cósmica antes de chegar ao laboratório.
+        </button>
+        <button class="btn-proximo" data-proximo="4">Os Minions encontram um macaco minúsculo que é o "Guardião da Banana".
+
         </main>
 </body>
 </html>
